<resources>
    <string name="app_name">INSUBRIA_SURVIVE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Insubria Survive</string>
    <string name="nav_header_subtitle">Nome utente</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Esci</string>

    <string name="menu_home">Home</string>
    <string name="menu_esami">Esami</string>
    <string name="menu_orario_lezioni">Lezioni</string>
    <string name="menu_timeline">Padiglioni</string>
    <string name="menu_navigatore">Navigatore</string>
    <string name="menu_preferenze">Preferenze</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">ACCEDI</string>
    <string name="action_sign_in_short">accedi</string>
    <string name="welcome">Ciao </string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">La password deve avere almeno 6 caratteri</string>
    <string name="login_failed">"ACCESSO NEGATO"</string>

    <string name="bt_preferenze">Preferenza</string>
    <string name="da_fare">ESAMI IN PROGRAMMA</string>
    <string name="in_forse">ESAMI IN FORSE</string>
    <string name="non_fare">ESAMI NON IN PROGRAMMA</string>

    <string name="bt_calendario">Calendario</string>
    <string name="nessuna_lezione_prevista">Nessuna lezione prevista</string>
    <string name="INSUBRIA_SURVIVE">INSUBRIA SURVIVE</string>
    <string name="ESAMI">TUTTI GLI ESAMI</string>
    <string name="TIMELINE">ORARI DEI PADIGLIONI</string>
    <string name="PAD">PUNTI DI ACCESSO DELL\'ATENEO</string>
    <string name="PREFERENZE">LE MIE PREFERENZE</string>


</resources>