<?xml version="1.0" encoding="utf-8"?>
<!--suppress NavigationFile -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.insubria_survive.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_exams"
        android:name="com.example.insubria_survive.ui.esami.EsamiFragment"
        android:label="@string/menu_esami"
        tools:layout="@layout/fragment_esami" />

    <fragment
        android:id="@+id/nav_lessons"
        android:name="com.example.insubria_survive.ui.lezioni.LezioniFragment"
        android:label="@string/menu_orario_lezioni"
        tools:layout="@layout/fragment_lezioni" />

    <fragment
        android:id="@+id/nav_timeline"
        android:name="com.example.insubria_survive.ui.timeline.TimelineFragment"
        android:label="@string/menu_timeline"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.example.insubria_survive.ui.preferenze.PreferenzeFragment"
        android:label="@string/menu_preferenze"
        tools:layout="@layout/fragment_preferenze" />

</navigation>

